--- a/index.html
+++ b/index.html
@@ -142,6 +142,48 @@
                 </article>
             </div>
         </div>
+
+        <div class="bs-dev-row">
+            <div class="bs-dev-lg-col-half ">
+                <div class="header_img">
+                    <img src="https://thumbs.dreamstime.com/b/spa-model-woman-clear-skin-manicured-nails-gray-banner-background-151970565.jpg" alt="">
+                    
+                </div>
+            </div>
+            <div class="bs-dev-lg-col-half bg-succeess">
+                <div class="header-text">
+                    <h2 class="head-title">what is a sein prototype ?</h2>
+                    <p class="p_head_text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestiae magni optio recusandae rerum itaque, vitae reprehenderit ad excepturi. Facilis harum dicta non. Temporibus labore natus rerum, suscipit minima error.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="tr-steps-teaser">
+            <h2 class="tr-step-title">
+                3 steps to your custom formula
+            </h2>
+            <div class="steps-wrapper">
+
+            <div class="steps">
+                <div class="step">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat explicabo recusandae mollitia odit inventore nobis saepe, commodi minus, eum quam incidunt veniam excepturi eius, eaque tenetur suscipit? Quas, distinctio sapiente?
+                </div>
+
+                <div class="step">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat explicabo recusandae mollitia odit inventore nobis saepe, commodi minus, eum quam incidunt veniam excepturi eius, eaque tenetur suscipit? Quas, distinctio sapiente?
+                </div>
+                <div class="step">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat explicabo recusandae mollitia odit inventore nobis saepe, commodi minus, eum quam incidunt veniam excepturi eius, eaque tenetur suscipit? Quas, distinctio sapiente?
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="quizz-teaser">
+            <a href="#" class="quizz-btn">
+                take our quizz skin
+            </a>
+        </div>
     </div>
 </body>
 </html>
